# edi-parser

./: .gitignore  .hlint.yaml  LICENSE  Makefile  README.md  default.nix  flake.nix  justfile  lib.nix  release-bundle.nix  release.nix  stack.yaml
core/: Makefile  README.md  edi-parser-core.cabal  justfile  package.yaml
core/src/Text/Edifact/: Common.hs  Inspect.hs  Parsing.hs  Types.hs
core/src/Text/Edifact/Common/: Composites.hs  Segments.hs  Simples.hs
core/src/Text/Edifact/Common/Segments/: UNA.hs  UNB.hs  UNH.hs  UNS.hs  UNT.hs  UNZ.hs
core/src/Text/Edifact/Parsing/: Combinators.hs  Commons.hs  Primitives.hs
core/test/: ParsingTest.hs  Spec.hs
core/test/Parsing/: CombinatorsTest.hs  PrimitivesTest.hs
specification/: README.md  edi-parser-specification.cabal  justfile  package.yaml
specification/app/: Main.hs
specification/references/D01B/composites/: c002.txt  c040.txt  c056.txt  c058.txt  c059.txt  c076.txt  c080.txt  c082.txt  c100.txt  c106.txt  c107.txt  c108.txt  c174.txt  c186.txt  c200.txt  c203.txt  c205.txt  c208.txt  c210.txt  c211.txt  c212.txt  c213.txt  c215.txt  c218.txt  c219.txt  c220.txt  c222.txt  c223.txt  c224.txt  c228.txt  c229.txt  c231.txt  c232.txt  c233.txt  c234.txt  c235.txt  c236.txt  c237.txt  c239.txt  c270.txt  (+28 more)
specification/references/D01B/messages/: ifcsum_d.txt  ifcsum_s.txt  iftsta_d.txt  iftsta_s.txt
specification/references/D01B/segments/: bgm.txt  cni.txt  cnt.txt  com.txt  cpi.txt  cta.txt  cux.txt  dgs.txt  dim.txt  doc.txt  dtm.txt  eqa.txt  eqd.txt  eqn.txt  ftx.txt  gds.txt  gid.txt  gin.txt  gor.txt  han.txt  icd.txt  loc.txt  mea.txt  moa.txt  nad.txt  pcd.txt  pci.txt  pia.txt  pri.txt  qty.txt  rff.txt  rng.txt  sel.txt  seq.txt  sgp.txt  sts.txt  tcc.txt  tdt.txt  tmd.txt  tmp.txt  (+3 more)
specification/references/D01B/simples/: 1000.txt  1001.txt  1004.txt  1050.txt  1056.txt  1060.txt  1131.txt  1153.txt  1154.txt  1156.txt  1159.txt  1218.txt  1220.txt  1225.txt  1229.txt  1312.txt  1366.txt  1373.txt  1490.txt  1496.txt  2005.txt  2379.txt  2380.txt  3035.txt  3036.txt  3039.txt  3042.txt  3045.txt  3055.txt  3124.txt  3127.txt  3128.txt  3139.txt  3148.txt  3153.txt  3155.txt  3164.txt  3207.txt  3222.txt  3223.txt  (+152 more)
specification/references/D96A/composites/: c002.txt  c040.txt  c056.txt  c058.txt  c059.txt  c076.txt  c080.txt  c082.txt  c100.txt  c107.txt  c108.txt  c174.txt  c186.txt  c200.txt  c202.txt  c203.txt  c205.txt  c206.txt  c208.txt  c210.txt  c211.txt  c212.txt  c213.txt  c214.txt  c215.txt  c218.txt  c219.txt  c220.txt  c222.txt  c223.txt  c224.txt  c228.txt  c229.txt  c231.txt  c232.txt  c233.txt  c234.txt  c235.txt  c236.txt  c237.txt  (+34 more)
specification/references/D96A/messages/: desadv_d.txt  desadv_s.txt  ifcsum_d.txt  ifcsum_s.txt  iftsai_d.txt  iftsai_s.txt  iftsta_d.txt  iftsta_s.txt
specification/references/D96A/segments/: ali.txt  bgm.txt  cni.txt  cnt.txt  com.txt  cpi.txt  cps.txt  cta.txt  cux.txt  dgs.txt  dim.txt  dlm.txt  doc.txt  dtm.txt  eqa.txt  eqd.txt  eqn.txt  ftx.txt  gds.txt  gid.txt  gin.txt  gir.txt  gor.txt  han.txt  imd.txt  lin.txt  loc.txt  mea.txt  moa.txt  nad.txt  pac.txt  pcd.txt  pci.txt  pia.txt  pri.txt  qty.txt  qvr.txt  rff.txt  rng.txt  sel.txt  (+11 more)
specification/references/D96A/simples/: 1000.txt  1001.txt  1004.txt  1082.txt  1131.txt  1153.txt  1154.txt  1156.txt  1218.txt  1220.txt  1222.txt  1225.txt  1229.txt  1312.txt  1366.txt  1373.txt  1490.txt  1496.txt  2005.txt  2379.txt  2380.txt  3035.txt  3036.txt  3039.txt  3042.txt  3045.txt  3055.txt  3124.txt  3127.txt  3128.txt  3139.txt  3148.txt  3153.txt  3155.txt  3164.txt  3207.txt  3222.txt  3223.txt  3224.txt  3225.txt  (+172 more)
specification/src/Text/Edifact/: D01B.hs  D96A.hs
specification/src/Text/Edifact/D01B/: Composites.hs  Messages.hs  Segments.hs  Simples.hs
specification/src/Text/Edifact/D01B/Composites/: C002.hs  C040.hs  C056.hs  C058.hs  C059.hs  C076.hs  C080.hs  C082.hs  C100.hs  C106.hs  C107.hs  C108.hs  C174.hs  C186.hs  C200.hs  C203.hs  C205.hs  C208.hs  C210.hs  C211.hs  C212.hs  C213.hs  C215.hs  C218.hs  C219.hs  C220.hs  C222.hs  C223.hs  C224.hs  C228.hs  C229.hs  C231.hs  C232.hs  C233.hs  C234.hs  C235.hs  C236.hs  C237.hs  C239.hs  C270.hs  (+28 more)
specification/src/Text/Edifact/D01B/Messages/: IFCSUM.hs  IFTSTA.hs
specification/src/Text/Edifact/D01B/Segments/: BGM.hs  CNI.hs  CNT.hs  COM.hs  CPI.hs  CTA.hs  CUX.hs  DGS.hs  DIM.hs  DOC.hs  DTM.hs  EQA.hs  EQD.hs  EQN.hs  FTX.hs  GDS.hs  GID.hs  GIN.hs  GOR.hs  HAN.hs  ICD.hs  LOC.hs  MEA.hs  MOA.hs  NAD.hs  PCD.hs  PCI.hs  PIA.hs  PRI.hs  QTY.hs  RFF.hs  RNG.hs  SEL.hs  SEQ.hs  SGP.hs  STS.hs  TCC.hs  TDT.hs  TMD.hs  TMP.hs  (+3 more)
specification/src/Text/Edifact/D01B/Simples/: S1000.hs  S1001.hs  S1004.hs  S1050.hs  S1056.hs  S1060.hs  S1131.hs  S1153.hs  S1154.hs  S1156.hs  S1159.hs  S1218.hs  S1220.hs  S1225.hs  S1229.hs  S1312.hs  S1366.hs  S1373.hs  S1490.hs  S1496.hs  S2005.hs  S2379.hs  S2380.hs  S3035.hs  S3036.hs  S3039.hs  S3042.hs  S3045.hs  S3055.hs  S3124.hs  S3127.hs  S3128.hs  S3139.hs  S3148.hs  S3153.hs  S3155.hs  S3164.hs  S3207.hs  S3222.hs  S3223.hs  (+152 more)
specification/src/Text/Edifact/D96A/: Composites.hs  Messages.hs  Segments.hs  Simples.hs
specification/src/Text/Edifact/D96A/Composites/: C002.hs  C040.hs  C056.hs  C058.hs  C059.hs  C076.hs  C080.hs  C082.hs  C100.hs  C107.hs  C108.hs  C174.hs  C186.hs  C200.hs  C202.hs  C203.hs  C205.hs  C206.hs  C208.hs  C210.hs  C211.hs  C212.hs  C213.hs  C214.hs  C215.hs  C218.hs  C219.hs  C220.hs  C222.hs  C223.hs  C224.hs  C228.hs  C229.hs  C231.hs  C232.hs  C233.hs  C234.hs  C235.hs  C236.hs  C237.hs  (+34 more)
specification/src/Text/Edifact/D96A/Messages/: DESADV.hs  IFCSUM.hs  IFTSAI.hs  IFTSTA.hs
specification/src/Text/Edifact/D96A/Segments/: ALI.hs  BGM.hs  CNI.hs  CNT.hs  COM.hs  CPI.hs  CPS.hs  CTA.hs  CUX.hs  DGS.hs  DIM.hs  DLM.hs  DOC.hs  DTM.hs  EQA.hs  EQD.hs  EQN.hs  FTX.hs  GDS.hs  GID.hs  GIN.hs  GIR.hs  GOR.hs  HAN.hs  IMD.hs  LIN.hs  LOC.hs  MEA.hs  MOA.hs  NAD.hs  PAC.hs  PCD.hs  PCI.hs  PIA.hs  PRI.hs  QTY.hs  QVR.hs  RFF.hs  (+11 more)
specification/test/: Edifact.hs  Spec.hs
(+270 files in other folders)
