cabal-version: 3.0

name:           edi-parser-specification
version:        20190607
synopsis:       Support for subset of the Edifact specification
description:    Please see README.md
category:       Text
homepage:       https://github.com/funky-thunks/edi-parser#readme
bug-reports:    https://github.com/funky-thunks/edi-parser/issues
author:         FretLink, Funky Thunks
maintainer:     example@example.com
copyright:      2019 FretLink, 2024 Funky Thunks
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/funky-thunks/edi-parser

library
  exposed-modules:
      Text.Edifact.D01B
      Text.Edifact.D01B.Composites
      Text.Edifact.D01B.Composites.C002
      Text.Edifact.D01B.Composites.C040
      Text.Edifact.D01B.Composites.C056
      Text.Edifact.D01B.Composites.C058
      Text.Edifact.D01B.Composites.C059
      Text.Edifact.D01B.Composites.C076
      Text.Edifact.D01B.Composites.C080
      Text.Edifact.D01B.Composites.C082
      Text.Edifact.D01B.Composites.C100
      Text.Edifact.D01B.Composites.C106
      Text.Edifact.D01B.Composites.C107
      Text.Edifact.D01B.Composites.C108
      Text.Edifact.D01B.Composites.C174
      Text.Edifact.D01B.Composites.C186
      Text.Edifact.D01B.Composites.C200
      Text.Edifact.D01B.Composites.C203
      Text.Edifact.D01B.Composites.C205
      Text.Edifact.D01B.Composites.C208
      Text.Edifact.D01B.Composites.C210
      Text.Edifact.D01B.Composites.C211
      Text.Edifact.D01B.Composites.C212
      Text.Edifact.D01B.Composites.C213
      Text.Edifact.D01B.Composites.C215
      Text.Edifact.D01B.Composites.C218
      Text.Edifact.D01B.Composites.C219
      Text.Edifact.D01B.Composites.C220
      Text.Edifact.D01B.Composites.C222
      Text.Edifact.D01B.Composites.C223
      Text.Edifact.D01B.Composites.C224
      Text.Edifact.D01B.Composites.C228
      Text.Edifact.D01B.Composites.C229
      Text.Edifact.D01B.Composites.C231
      Text.Edifact.D01B.Composites.C232
      Text.Edifact.D01B.Composites.C233
      Text.Edifact.D01B.Composites.C234
      Text.Edifact.D01B.Composites.C235
      Text.Edifact.D01B.Composites.C236
      Text.Edifact.D01B.Composites.C237
      Text.Edifact.D01B.Composites.C239
      Text.Edifact.D01B.Composites.C270
      Text.Edifact.D01B.Composites.C280
      Text.Edifact.D01B.Composites.C286
      Text.Edifact.D01B.Composites.C330
      Text.Edifact.D01B.Composites.C331
      Text.Edifact.D01B.Composites.C401
      Text.Edifact.D01B.Composites.C501
      Text.Edifact.D01B.Composites.C502
      Text.Edifact.D01B.Composites.C503
      Text.Edifact.D01B.Composites.C504
      Text.Edifact.D01B.Composites.C506
      Text.Edifact.D01B.Composites.C507
      Text.Edifact.D01B.Composites.C509
      Text.Edifact.D01B.Composites.C516
      Text.Edifact.D01B.Composites.C517
      Text.Edifact.D01B.Composites.C519
      Text.Edifact.D01B.Composites.C523
      Text.Edifact.D01B.Composites.C524
      Text.Edifact.D01B.Composites.C528
      Text.Edifact.D01B.Composites.C536
      Text.Edifact.D01B.Composites.C537
      Text.Edifact.D01B.Composites.C553
      Text.Edifact.D01B.Composites.C554
      Text.Edifact.D01B.Composites.C555
      Text.Edifact.D01B.Composites.C556
      Text.Edifact.D01B.Composites.C601
      Text.Edifact.D01B.Composites.C703
      Text.Edifact.D01B.Composites.C819
      Text.Edifact.D01B.Composites.C827
      Text.Edifact.D01B.Messages
      Text.Edifact.D01B.Messages.IFCSUM
      Text.Edifact.D01B.Messages.IFTSTA
      Text.Edifact.D01B.Segments
      Text.Edifact.D01B.Segments.BGM
      Text.Edifact.D01B.Segments.CNI
      Text.Edifact.D01B.Segments.CNT
      Text.Edifact.D01B.Segments.COM
      Text.Edifact.D01B.Segments.CPI
      Text.Edifact.D01B.Segments.CTA
      Text.Edifact.D01B.Segments.CUX
      Text.Edifact.D01B.Segments.DGS
      Text.Edifact.D01B.Segments.DIM
      Text.Edifact.D01B.Segments.DOC
      Text.Edifact.D01B.Segments.DTM
      Text.Edifact.D01B.Segments.EQA
      Text.Edifact.D01B.Segments.EQD
      Text.Edifact.D01B.Segments.EQN
      Text.Edifact.D01B.Segments.FTX
      Text.Edifact.D01B.Segments.GDS
      Text.Edifact.D01B.Segments.GID
      Text.Edifact.D01B.Segments.GIN
      Text.Edifact.D01B.Segments.GOR
      Text.Edifact.D01B.Segments.HAN
      Text.Edifact.D01B.Segments.ICD
      Text.Edifact.D01B.Segments.LOC
      Text.Edifact.D01B.Segments.MEA
      Text.Edifact.D01B.Segments.MOA
      Text.Edifact.D01B.Segments.NAD
      Text.Edifact.D01B.Segments.PCD
      Text.Edifact.D01B.Segments.PCI
      Text.Edifact.D01B.Segments.PIA
      Text.Edifact.D01B.Segments.PRI
      Text.Edifact.D01B.Segments.QTY
      Text.Edifact.D01B.Segments.RFF
      Text.Edifact.D01B.Segments.RNG
      Text.Edifact.D01B.Segments.SEL
      Text.Edifact.D01B.Segments.SEQ
      Text.Edifact.D01B.Segments.SGP
      Text.Edifact.D01B.Segments.STS
      Text.Edifact.D01B.Segments.TCC
      Text.Edifact.D01B.Segments.TDT
      Text.Edifact.D01B.Segments.TMD
      Text.Edifact.D01B.Segments.TMP
      Text.Edifact.D01B.Segments.TOD
      Text.Edifact.D01B.Segments.TPL
      Text.Edifact.D01B.Segments.TSR
      Text.Edifact.D01B.Simples
      Text.Edifact.D01B.Simples.S1000
      Text.Edifact.D01B.Simples.S1001
      Text.Edifact.D01B.Simples.S1004
      Text.Edifact.D01B.Simples.S1050
      Text.Edifact.D01B.Simples.S1056
      Text.Edifact.D01B.Simples.S1060
      Text.Edifact.D01B.Simples.S1131
      Text.Edifact.D01B.Simples.S1153
      Text.Edifact.D01B.Simples.S1154
      Text.Edifact.D01B.Simples.S1156
      Text.Edifact.D01B.Simples.S1159
      Text.Edifact.D01B.Simples.S1218
      Text.Edifact.D01B.Simples.S1220
      Text.Edifact.D01B.Simples.S1225
      Text.Edifact.D01B.Simples.S1229
      Text.Edifact.D01B.Simples.S1312
      Text.Edifact.D01B.Simples.S1366
      Text.Edifact.D01B.Simples.S1373
      Text.Edifact.D01B.Simples.S1490
      Text.Edifact.D01B.Simples.S1496
      Text.Edifact.D01B.Simples.S2005
      Text.Edifact.D01B.Simples.S2379
      Text.Edifact.D01B.Simples.S2380
      Text.Edifact.D01B.Simples.S3035
      Text.Edifact.D01B.Simples.S3036
      Text.Edifact.D01B.Simples.S3039
      Text.Edifact.D01B.Simples.S3042
      Text.Edifact.D01B.Simples.S3045
      Text.Edifact.D01B.Simples.S3055
      Text.Edifact.D01B.Simples.S3124
      Text.Edifact.D01B.Simples.S3127
      Text.Edifact.D01B.Simples.S3128
      Text.Edifact.D01B.Simples.S3139
      Text.Edifact.D01B.Simples.S3148
      Text.Edifact.D01B.Simples.S3153
      Text.Edifact.D01B.Simples.S3155
      Text.Edifact.D01B.Simples.S3164
      Text.Edifact.D01B.Simples.S3207
      Text.Edifact.D01B.Simples.S3222
      Text.Edifact.D01B.Simples.S3223
      Text.Edifact.D01B.Simples.S3224
      Text.Edifact.D01B.Simples.S3225
      Text.Edifact.D01B.Simples.S3227
      Text.Edifact.D01B.Simples.S3228
      Text.Edifact.D01B.Simples.S3229
      Text.Edifact.D01B.Simples.S3232
      Text.Edifact.D01B.Simples.S3233
      Text.Edifact.D01B.Simples.S3251
      Text.Edifact.D01B.Simples.S3412
      Text.Edifact.D01B.Simples.S3413
      Text.Edifact.D01B.Simples.S3453
      Text.Edifact.D01B.Simples.S4000
      Text.Edifact.D01B.Simples.S4052
      Text.Edifact.D01B.Simples.S4053
      Text.Edifact.D01B.Simples.S4055
      Text.Edifact.D01B.Simples.S4065
      Text.Edifact.D01B.Simples.S4078
      Text.Edifact.D01B.Simples.S4079
      Text.Edifact.D01B.Simples.S4215
      Text.Edifact.D01B.Simples.S4219
      Text.Edifact.D01B.Simples.S4233
      Text.Edifact.D01B.Simples.S4237
      Text.Edifact.D01B.Simples.S4343
      Text.Edifact.D01B.Simples.S4347
      Text.Edifact.D01B.Simples.S4404
      Text.Edifact.D01B.Simples.S4405
      Text.Edifact.D01B.Simples.S4440
      Text.Edifact.D01B.Simples.S4441
      Text.Edifact.D01B.Simples.S4447
      Text.Edifact.D01B.Simples.S4451
      Text.Edifact.D01B.Simples.S4453
      Text.Edifact.D01B.Simples.S4494
      Text.Edifact.D01B.Simples.S4495
      Text.Edifact.D01B.Simples.S4497
      Text.Edifact.D01B.Simples.S4517
      Text.Edifact.D01B.Simples.S5004
      Text.Edifact.D01B.Simples.S5025
      Text.Edifact.D01B.Simples.S5118
      Text.Edifact.D01B.Simples.S5125
      Text.Edifact.D01B.Simples.S5213
      Text.Edifact.D01B.Simples.S5237
      Text.Edifact.D01B.Simples.S5242
      Text.Edifact.D01B.Simples.S5243
      Text.Edifact.D01B.Simples.S5245
      Text.Edifact.D01B.Simples.S5249
      Text.Edifact.D01B.Simples.S5275
      Text.Edifact.D01B.Simples.S5284
      Text.Edifact.D01B.Simples.S5375
      Text.Edifact.D01B.Simples.S5387
      Text.Edifact.D01B.Simples.S5402
      Text.Edifact.D01B.Simples.S5479
      Text.Edifact.D01B.Simples.S5482
      Text.Edifact.D01B.Simples.S6008
      Text.Edifact.D01B.Simples.S6060
      Text.Edifact.D01B.Simples.S6063
      Text.Edifact.D01B.Simples.S6066
      Text.Edifact.D01B.Simples.S6069
      Text.Edifact.D01B.Simples.S6140
      Text.Edifact.D01B.Simples.S6145
      Text.Edifact.D01B.Simples.S6152
      Text.Edifact.D01B.Simples.S6154
      Text.Edifact.D01B.Simples.S6155
      Text.Edifact.D01B.Simples.S6162
      Text.Edifact.D01B.Simples.S6167
      Text.Edifact.D01B.Simples.S6168
      Text.Edifact.D01B.Simples.S6245
      Text.Edifact.D01B.Simples.S6246
      Text.Edifact.D01B.Simples.S6311
      Text.Edifact.D01B.Simples.S6313
      Text.Edifact.D01B.Simples.S6314
      Text.Edifact.D01B.Simples.S6321
      Text.Edifact.D01B.Simples.S6341
      Text.Edifact.D01B.Simples.S6343
      Text.Edifact.D01B.Simples.S6345
      Text.Edifact.D01B.Simples.S6347
      Text.Edifact.D01B.Simples.S6348
      Text.Edifact.D01B.Simples.S6350
      Text.Edifact.D01B.Simples.S6353
      Text.Edifact.D01B.Simples.S6411
      Text.Edifact.D01B.Simples.S6432
      Text.Edifact.D01B.Simples.S7064
      Text.Edifact.D01B.Simples.S7065
      Text.Edifact.D01B.Simples.S7085
      Text.Edifact.D01B.Simples.S7088
      Text.Edifact.D01B.Simples.S7102
      Text.Edifact.D01B.Simples.S7106
      Text.Edifact.D01B.Simples.S7124
      Text.Edifact.D01B.Simples.S7130
      Text.Edifact.D01B.Simples.S7140
      Text.Edifact.D01B.Simples.S7143
      Text.Edifact.D01B.Simples.S7224
      Text.Edifact.D01B.Simples.S7233
      Text.Edifact.D01B.Simples.S7273
      Text.Edifact.D01B.Simples.S7357
      Text.Edifact.D01B.Simples.S7383
      Text.Edifact.D01B.Simples.S7402
      Text.Edifact.D01B.Simples.S7405
      Text.Edifact.D01B.Simples.S7418
      Text.Edifact.D01B.Simples.S7419
      Text.Edifact.D01B.Simples.S7511
      Text.Edifact.D01B.Simples.S8022
      Text.Edifact.D01B.Simples.S8023
      Text.Edifact.D01B.Simples.S8028
      Text.Edifact.D01B.Simples.S8051
      Text.Edifact.D01B.Simples.S8053
      Text.Edifact.D01B.Simples.S8066
      Text.Edifact.D01B.Simples.S8067
      Text.Edifact.D01B.Simples.S8077
      Text.Edifact.D01B.Simples.S8078
      Text.Edifact.D01B.Simples.S8092
      Text.Edifact.D01B.Simples.S8101
      Text.Edifact.D01B.Simples.S8126
      Text.Edifact.D01B.Simples.S8154
      Text.Edifact.D01B.Simples.S8155
      Text.Edifact.D01B.Simples.S8158
      Text.Edifact.D01B.Simples.S8169
      Text.Edifact.D01B.Simples.S8178
      Text.Edifact.D01B.Simples.S8179
      Text.Edifact.D01B.Simples.S8186
      Text.Edifact.D01B.Simples.S8211
      Text.Edifact.D01B.Simples.S8212
      Text.Edifact.D01B.Simples.S8213
      Text.Edifact.D01B.Simples.S8246
      Text.Edifact.D01B.Simples.S8249
      Text.Edifact.D01B.Simples.S8255
      Text.Edifact.D01B.Simples.S8260
      Text.Edifact.D01B.Simples.S8273
      Text.Edifact.D01B.Simples.S8275
      Text.Edifact.D01B.Simples.S8281
      Text.Edifact.D01B.Simples.S8323
      Text.Edifact.D01B.Simples.S8325
      Text.Edifact.D01B.Simples.S8332
      Text.Edifact.D01B.Simples.S8334
      Text.Edifact.D01B.Simples.S8335
      Text.Edifact.D01B.Simples.S8339
      Text.Edifact.D01B.Simples.S8341
      Text.Edifact.D01B.Simples.S8351
      Text.Edifact.D01B.Simples.S8364
      Text.Edifact.D01B.Simples.S8410
      Text.Edifact.D01B.Simples.S8453
      Text.Edifact.D01B.Simples.S8457
      Text.Edifact.D01B.Simples.S8459
      Text.Edifact.D01B.Simples.S9012
      Text.Edifact.D01B.Simples.S9013
      Text.Edifact.D01B.Simples.S9015
      Text.Edifact.D01B.Simples.S9302
      Text.Edifact.D01B.Simples.S9303
      Text.Edifact.D01B.Simples.S9308
      Text.Edifact.D01B.Simples.S9353
      Text.Edifact.D01B.Simples.S9411
      Text.Edifact.D01B.Simples.S9415
      Text.Edifact.D01B.Simples.S9417
      Text.Edifact.D96A
      Text.Edifact.D96A.Composites
      Text.Edifact.D96A.Composites.C002
      Text.Edifact.D96A.Composites.C040
      Text.Edifact.D96A.Composites.C056
      Text.Edifact.D96A.Composites.C058
      Text.Edifact.D96A.Composites.C059
      Text.Edifact.D96A.Composites.C076
      Text.Edifact.D96A.Composites.C080
      Text.Edifact.D96A.Composites.C082
      Text.Edifact.D96A.Composites.C100
      Text.Edifact.D96A.Composites.C107
      Text.Edifact.D96A.Composites.C108
      Text.Edifact.D96A.Composites.C174
      Text.Edifact.D96A.Composites.C186
      Text.Edifact.D96A.Composites.C200
      Text.Edifact.D96A.Composites.C202
      Text.Edifact.D96A.Composites.C203
      Text.Edifact.D96A.Composites.C205
      Text.Edifact.D96A.Composites.C206
      Text.Edifact.D96A.Composites.C208
      Text.Edifact.D96A.Composites.C210
      Text.Edifact.D96A.Composites.C211
      Text.Edifact.D96A.Composites.C212
      Text.Edifact.D96A.Composites.C213
      Text.Edifact.D96A.Composites.C214
      Text.Edifact.D96A.Composites.C215
      Text.Edifact.D96A.Composites.C218
      Text.Edifact.D96A.Composites.C219
      Text.Edifact.D96A.Composites.C220
      Text.Edifact.D96A.Composites.C222
      Text.Edifact.D96A.Composites.C223
      Text.Edifact.D96A.Composites.C224
      Text.Edifact.D96A.Composites.C228
      Text.Edifact.D96A.Composites.C229
      Text.Edifact.D96A.Composites.C231
      Text.Edifact.D96A.Composites.C232
      Text.Edifact.D96A.Composites.C233
      Text.Edifact.D96A.Composites.C234
      Text.Edifact.D96A.Composites.C235
      Text.Edifact.D96A.Composites.C236
      Text.Edifact.D96A.Composites.C237
      Text.Edifact.D96A.Composites.C239
      Text.Edifact.D96A.Composites.C270
      Text.Edifact.D96A.Composites.C273
      Text.Edifact.D96A.Composites.C279
      Text.Edifact.D96A.Composites.C280
      Text.Edifact.D96A.Composites.C401
      Text.Edifact.D96A.Composites.C402
      Text.Edifact.D96A.Composites.C501
      Text.Edifact.D96A.Composites.C502
      Text.Edifact.D96A.Composites.C503
      Text.Edifact.D96A.Composites.C504
      Text.Edifact.D96A.Composites.C506
      Text.Edifact.D96A.Composites.C507
      Text.Edifact.D96A.Composites.C509
      Text.Edifact.D96A.Composites.C516
      Text.Edifact.D96A.Composites.C517
      Text.Edifact.D96A.Composites.C519
      Text.Edifact.D96A.Composites.C522
      Text.Edifact.D96A.Composites.C523
      Text.Edifact.D96A.Composites.C524
      Text.Edifact.D96A.Composites.C528
      Text.Edifact.D96A.Composites.C531
      Text.Edifact.D96A.Composites.C532
      Text.Edifact.D96A.Composites.C536
      Text.Edifact.D96A.Composites.C537
      Text.Edifact.D96A.Composites.C553
      Text.Edifact.D96A.Composites.C554
      Text.Edifact.D96A.Composites.C555
      Text.Edifact.D96A.Composites.C556
      Text.Edifact.D96A.Composites.C601
      Text.Edifact.D96A.Composites.C703
      Text.Edifact.D96A.Composites.C827
      Text.Edifact.D96A.Composites.C829
      Text.Edifact.D96A.Composites.C960
      Text.Edifact.D96A.Messages
      Text.Edifact.D96A.Messages.DESADV
      Text.Edifact.D96A.Messages.IFCSUM
      Text.Edifact.D96A.Messages.IFTSAI
      Text.Edifact.D96A.Messages.IFTSTA
      Text.Edifact.D96A.Segments
      Text.Edifact.D96A.Segments.ALI
      Text.Edifact.D96A.Segments.BGM
      Text.Edifact.D96A.Segments.CNI
      Text.Edifact.D96A.Segments.CNT
      Text.Edifact.D96A.Segments.COM
      Text.Edifact.D96A.Segments.CPI
      Text.Edifact.D96A.Segments.CPS
      Text.Edifact.D96A.Segments.CTA
      Text.Edifact.D96A.Segments.CUX
      Text.Edifact.D96A.Segments.DGS
      Text.Edifact.D96A.Segments.DIM
      Text.Edifact.D96A.Segments.DLM
      Text.Edifact.D96A.Segments.DOC
      Text.Edifact.D96A.Segments.DTM
      Text.Edifact.D96A.Segments.EQA
      Text.Edifact.D96A.Segments.EQD
      Text.Edifact.D96A.Segments.EQN
      Text.Edifact.D96A.Segments.FTX
      Text.Edifact.D96A.Segments.GDS
      Text.Edifact.D96A.Segments.GID
      Text.Edifact.D96A.Segments.GIN
      Text.Edifact.D96A.Segments.GIR
      Text.Edifact.D96A.Segments.GOR
      Text.Edifact.D96A.Segments.HAN
      Text.Edifact.D96A.Segments.IMD
      Text.Edifact.D96A.Segments.LIN
      Text.Edifact.D96A.Segments.LOC
      Text.Edifact.D96A.Segments.MEA
      Text.Edifact.D96A.Segments.MOA
      Text.Edifact.D96A.Segments.NAD
      Text.Edifact.D96A.Segments.PAC
      Text.Edifact.D96A.Segments.PCD
      Text.Edifact.D96A.Segments.PCI
      Text.Edifact.D96A.Segments.PIA
      Text.Edifact.D96A.Segments.PRI
      Text.Edifact.D96A.Segments.QTY
      Text.Edifact.D96A.Segments.QVR
      Text.Edifact.D96A.Segments.RFF
      Text.Edifact.D96A.Segments.RNG
      Text.Edifact.D96A.Segments.SEL
      Text.Edifact.D96A.Segments.SGP
      Text.Edifact.D96A.Segments.STS
      Text.Edifact.D96A.Segments.TCC
      Text.Edifact.D96A.Segments.TDT
      Text.Edifact.D96A.Segments.TMD
      Text.Edifact.D96A.Segments.TMP
      Text.Edifact.D96A.Segments.TOD
      Text.Edifact.D96A.Segments.TPL
      Text.Edifact.D96A.Segments.TSR
      Text.Edifact.D96A.Simples
      Text.Edifact.D96A.Simples.S1000
      Text.Edifact.D96A.Simples.S1001
      Text.Edifact.D96A.Simples.S1004
      Text.Edifact.D96A.Simples.S1082
      Text.Edifact.D96A.Simples.S1131
      Text.Edifact.D96A.Simples.S1153
      Text.Edifact.D96A.Simples.S1154
      Text.Edifact.D96A.Simples.S1156
      Text.Edifact.D96A.Simples.S1218
      Text.Edifact.D96A.Simples.S1220
      Text.Edifact.D96A.Simples.S1222
      Text.Edifact.D96A.Simples.S1225
      Text.Edifact.D96A.Simples.S1229
      Text.Edifact.D96A.Simples.S1312
      Text.Edifact.D96A.Simples.S1366
      Text.Edifact.D96A.Simples.S1373
      Text.Edifact.D96A.Simples.S1490
      Text.Edifact.D96A.Simples.S1496
      Text.Edifact.D96A.Simples.S2005
      Text.Edifact.D96A.Simples.S2379
      Text.Edifact.D96A.Simples.S2380
      Text.Edifact.D96A.Simples.S3035
      Text.Edifact.D96A.Simples.S3036
      Text.Edifact.D96A.Simples.S3039
      Text.Edifact.D96A.Simples.S3042
      Text.Edifact.D96A.Simples.S3045
      Text.Edifact.D96A.Simples.S3055
      Text.Edifact.D96A.Simples.S3124
      Text.Edifact.D96A.Simples.S3127
      Text.Edifact.D96A.Simples.S3128
      Text.Edifact.D96A.Simples.S3139
      Text.Edifact.D96A.Simples.S3148
      Text.Edifact.D96A.Simples.S3153
      Text.Edifact.D96A.Simples.S3155
      Text.Edifact.D96A.Simples.S3164
      Text.Edifact.D96A.Simples.S3207
      Text.Edifact.D96A.Simples.S3222
      Text.Edifact.D96A.Simples.S3223
      Text.Edifact.D96A.Simples.S3224
      Text.Edifact.D96A.Simples.S3225
      Text.Edifact.D96A.Simples.S3227
      Text.Edifact.D96A.Simples.S3229
      Text.Edifact.D96A.Simples.S3232
      Text.Edifact.D96A.Simples.S3233
      Text.Edifact.D96A.Simples.S3239
      Text.Edifact.D96A.Simples.S3251
      Text.Edifact.D96A.Simples.S3412
      Text.Edifact.D96A.Simples.S3413
      Text.Edifact.D96A.Simples.S3453
      Text.Edifact.D96A.Simples.S4000
      Text.Edifact.D96A.Simples.S4052
      Text.Edifact.D96A.Simples.S4053
      Text.Edifact.D96A.Simples.S4055
      Text.Edifact.D96A.Simples.S4065
      Text.Edifact.D96A.Simples.S4078
      Text.Edifact.D96A.Simples.S4079
      Text.Edifact.D96A.Simples.S4183
      Text.Edifact.D96A.Simples.S4215
      Text.Edifact.D96A.Simples.S4219
      Text.Edifact.D96A.Simples.S4221
      Text.Edifact.D96A.Simples.S4233
      Text.Edifact.D96A.Simples.S4237
      Text.Edifact.D96A.Simples.S4294
      Text.Edifact.D96A.Simples.S4295
      Text.Edifact.D96A.Simples.S4343
      Text.Edifact.D96A.Simples.S4347
      Text.Edifact.D96A.Simples.S4400
      Text.Edifact.D96A.Simples.S4401
      Text.Edifact.D96A.Simples.S4403
      Text.Edifact.D96A.Simples.S4405
      Text.Edifact.D96A.Simples.S4440
      Text.Edifact.D96A.Simples.S4441
      Text.Edifact.D96A.Simples.S4451
      Text.Edifact.D96A.Simples.S4453
      Text.Edifact.D96A.Simples.S4455
      Text.Edifact.D96A.Simples.S4457
      Text.Edifact.D96A.Simples.S4517
      Text.Edifact.D96A.Simples.S5004
      Text.Edifact.D96A.Simples.S5025
      Text.Edifact.D96A.Simples.S5118
      Text.Edifact.D96A.Simples.S5125
      Text.Edifact.D96A.Simples.S5213
      Text.Edifact.D96A.Simples.S5237
      Text.Edifact.D96A.Simples.S5242
      Text.Edifact.D96A.Simples.S5243
      Text.Edifact.D96A.Simples.S5245
      Text.Edifact.D96A.Simples.S5249
      Text.Edifact.D96A.Simples.S5275
      Text.Edifact.D96A.Simples.S5284
      Text.Edifact.D96A.Simples.S5375
      Text.Edifact.D96A.Simples.S5387
      Text.Edifact.D96A.Simples.S5402
      Text.Edifact.D96A.Simples.S5479
      Text.Edifact.D96A.Simples.S5482
      Text.Edifact.D96A.Simples.S5495
      Text.Edifact.D96A.Simples.S6008
      Text.Edifact.D96A.Simples.S6060
      Text.Edifact.D96A.Simples.S6063
      Text.Edifact.D96A.Simples.S6064
      Text.Edifact.D96A.Simples.S6066
      Text.Edifact.D96A.Simples.S6069
      Text.Edifact.D96A.Simples.S6140
      Text.Edifact.D96A.Simples.S6145
      Text.Edifact.D96A.Simples.S6152
      Text.Edifact.D96A.Simples.S6154
      Text.Edifact.D96A.Simples.S6155
      Text.Edifact.D96A.Simples.S6162
      Text.Edifact.D96A.Simples.S6167
      Text.Edifact.D96A.Simples.S6168
      Text.Edifact.D96A.Simples.S6245
      Text.Edifact.D96A.Simples.S6246
      Text.Edifact.D96A.Simples.S6311
      Text.Edifact.D96A.Simples.S6313
      Text.Edifact.D96A.Simples.S6314
      Text.Edifact.D96A.Simples.S6321
      Text.Edifact.D96A.Simples.S6341
      Text.Edifact.D96A.Simples.S6343
      Text.Edifact.D96A.Simples.S6345
      Text.Edifact.D96A.Simples.S6347
      Text.Edifact.D96A.Simples.S6348
      Text.Edifact.D96A.Simples.S6350
      Text.Edifact.D96A.Simples.S6353
      Text.Edifact.D96A.Simples.S6411
      Text.Edifact.D96A.Simples.S6432
      Text.Edifact.D96A.Simples.S7008
      Text.Edifact.D96A.Simples.S7009
      Text.Edifact.D96A.Simples.S7064
      Text.Edifact.D96A.Simples.S7065
      Text.Edifact.D96A.Simples.S7073
      Text.Edifact.D96A.Simples.S7075
      Text.Edifact.D96A.Simples.S7077
      Text.Edifact.D96A.Simples.S7081
      Text.Edifact.D96A.Simples.S7083
      Text.Edifact.D96A.Simples.S7085
      Text.Edifact.D96A.Simples.S7088
      Text.Edifact.D96A.Simples.S7102
      Text.Edifact.D96A.Simples.S7106
      Text.Edifact.D96A.Simples.S7124
      Text.Edifact.D96A.Simples.S7130
      Text.Edifact.D96A.Simples.S7140
      Text.Edifact.D96A.Simples.S7143
      Text.Edifact.D96A.Simples.S7160
      Text.Edifact.D96A.Simples.S7161
      Text.Edifact.D96A.Simples.S7164
      Text.Edifact.D96A.Simples.S7166
      Text.Edifact.D96A.Simples.S7224
      Text.Edifact.D96A.Simples.S7233
      Text.Edifact.D96A.Simples.S7273
      Text.Edifact.D96A.Simples.S7297
      Text.Edifact.D96A.Simples.S7357
      Text.Edifact.D96A.Simples.S7383
      Text.Edifact.D96A.Simples.S7402
      Text.Edifact.D96A.Simples.S7405
      Text.Edifact.D96A.Simples.S7419
      Text.Edifact.D96A.Simples.S7511
      Text.Edifact.D96A.Simples.S8022
      Text.Edifact.D96A.Simples.S8023
      Text.Edifact.D96A.Simples.S8028
      Text.Edifact.D96A.Simples.S8051
      Text.Edifact.D96A.Simples.S8053
      Text.Edifact.D96A.Simples.S8066
      Text.Edifact.D96A.Simples.S8067
      Text.Edifact.D96A.Simples.S8077
      Text.Edifact.D96A.Simples.S8078
      Text.Edifact.D96A.Simples.S8092
      Text.Edifact.D96A.Simples.S8101
      Text.Edifact.D96A.Simples.S8126
      Text.Edifact.D96A.Simples.S8154
      Text.Edifact.D96A.Simples.S8155
      Text.Edifact.D96A.Simples.S8158
      Text.Edifact.D96A.Simples.S8169
      Text.Edifact.D96A.Simples.S8178
      Text.Edifact.D96A.Simples.S8179
      Text.Edifact.D96A.Simples.S8186
      Text.Edifact.D96A.Simples.S8211
      Text.Edifact.D96A.Simples.S8212
      Text.Edifact.D96A.Simples.S8213
      Text.Edifact.D96A.Simples.S8246
      Text.Edifact.D96A.Simples.S8249
      Text.Edifact.D96A.Simples.S8255
      Text.Edifact.D96A.Simples.S8260
      Text.Edifact.D96A.Simples.S8273
      Text.Edifact.D96A.Simples.S8275
      Text.Edifact.D96A.Simples.S8281
      Text.Edifact.D96A.Simples.S8323
      Text.Edifact.D96A.Simples.S8325
      Text.Edifact.D96A.Simples.S8332
      Text.Edifact.D96A.Simples.S8334
      Text.Edifact.D96A.Simples.S8335
      Text.Edifact.D96A.Simples.S8339
      Text.Edifact.D96A.Simples.S8341
      Text.Edifact.D96A.Simples.S8351
      Text.Edifact.D96A.Simples.S8364
      Text.Edifact.D96A.Simples.S8393
      Text.Edifact.D96A.Simples.S8395
      Text.Edifact.D96A.Simples.S8410
      Text.Edifact.D96A.Simples.S8453
      Text.Edifact.D96A.Simples.S8457
      Text.Edifact.D96A.Simples.S8459
      Text.Edifact.D96A.Simples.S9010
      Text.Edifact.D96A.Simples.S9011
      Text.Edifact.D96A.Simples.S9012
      Text.Edifact.D96A.Simples.S9013
      Text.Edifact.D96A.Simples.S9015
      Text.Edifact.D96A.Simples.S9213
      Text.Edifact.D96A.Simples.S9302
      Text.Edifact.D96A.Simples.S9303
      Text.Edifact.D96A.Simples.S9308
      Text.Edifact.D96A.Simples.S9353
      Text.Edifact.D96A.Simples.S9411
      Text.Edifact.D96A.Simples.S9415
      Text.Edifact.D96A.Simples.S9417
  other-modules:
      Paths_edi_parser_specification
  hs-source-dirs:
      src
  ghc-options: -Wall -Werror
  build-depends:
      base >=4.7 && <5
    , edi-parser-core
  default-language: Haskell2010

executable edi-parser-specification
  main-is: Main.hs
  other-modules:
      Paths_edi_parser_specification
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , edi-parser-core
    , edi-parser-specification
    , text
  default-language: Haskell2010

test-suite edi-parser-specification-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Edifact
      Paths_edi_parser_specification
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:
      HUnit
    , base
    , edi-parser-core
    , edi-parser-specification
    , parsec
    , test-framework
    , test-framework-hunit
    , text
  default-language: Haskell2010
